# pixi-lock

./: .gitignore  .pre-commit-config.yaml  README.md  action.yml
.github/workflows/: test.yml
ci/test/: pixi.toml
ci/test/just-pixi-toml/: pixi.toml
ci/test/just-pyproject-toml/: pyproject.toml
ci/test/pyproject-and-pixi-toml/: pyproject.toml
create-and-cache/: action.yml
restore/: action.yml
